--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -5,28 +5,17 @@
 
 //Page
 @import "common-styles"
-@import "./_header/header"
-@import "_1_about-project/_1_about-project"
-@import "./_2_slider/2_slider"
-@import "./_3_location/3_location"
-@import "./_4_advantages/4_advantages"
-@import "./_5_why-nura/5_why-nura"
-@import "./_6_technologies/6_technologies"
-@import "./_7_payments/7_payments"
-@import "_footer/footer"
+@import "header"
+@import "1_about-project"
+@import "2_slider"
+@import "3_location"
+@import "4_advantages"
+@import "5_why-nura"
+@import "6_technologies"
+@import "7_payments"
+@import "footer"
 
 //Components
-@import "_components/_modal_window/modal_window"
-@import "_components/_burder_menu/burger_menu"
-
-
-//Responsive
-@import "_header/media_header"
-@import "./_1_about-project/media_1"
-@import "./_2_slider/media_2"
-@import "./_3_location/media_3"
-@import "./_4_advantages/media_4"
-@import "./_5_why-nura/media_5"
-@import "./_6_technologies/media_6"
-@import "./_7_payments/media_7"
-@import "./_footer/media_footer"
+@import "_components/modal_window"
+@import "_components/burger_menu"
+@import "_components/scrollup-btn"
