--- a/app/sass/_4_advantages.sass
+++ b/app/sass/_4_advantages.sass
@@ -1,6 +1,6 @@
 main
   section._4_advantages
-    padding: 40px 0 80px 0
+    padding: 130px 0 80px 0
     position: relative
     overflow: hidden
 
@@ -61,3 +61,53 @@ main
 
           li:last-child
             width: 100%
+
+@include media_desktop
+  main
+    section._4_advantages
+      padding: 50px 0 40px 0
+
+@include media_laptop
+
+
+@include media_tablet
+  main
+    section._4_advantages
+      .container
+        .advantages__content-box
+          padding-top: 20px
+
+          ul
+            li
+              margin: 0 20px 30px 0
+
+          .advantages__img-box
+            margin-bottom: 30px
+
+@include media_tablet-mobile
+  main
+    section._4_advantages
+      .container
+        padding: 0
+
+        img.advantages__dots,
+        img.advantages__bg
+          display: none
+
+        .advantages__content-box
+          h2
+            margin-left: 20px
+
+          ul
+            +ul-columns(1)
+            padding: 0 20px
+
+@include media_mobile
+  main
+    section._4_advantages
+      .container
+        padding: 0
+
+        .advantages__content-box
+          ul
+            padding: 0 20px
