--- a/app/sass/_7_payments.sass
+++ b/app/sass/_7_payments.sass
@@ -1,6 +1,11 @@
 main
   section._7_payments
     padding-top: 131px
+    position: relative
+
+    .h2-amin-title-bg
+      font-size: 10rem
+      line-height: 18rem
 
     .container
       margin-bottom: 56px
@@ -43,7 +48,7 @@ main
             font-weight: 700
 
       .payments__address
-        margin-top: 100px
+        padding-top: 100px
         +display(flex)
         justify-content: space-between
 
@@ -84,3 +89,70 @@ main
 
               li:not(:last-child)
                 margin-bottom: 10px
+
+@include media_laptop
+  main
+    section._7_payments
+      .container
+        >ul
+          margin-bottom: 20px
+
+        .payments__address
+          display: initial
+
+          .payments__address__map
+            max-width: 600px
+            width: 100%
+            margin: 0 auto 20px auto
+
+          .payments__address__contacts
+            max-width: 600px
+            width: 100%
+            margin: 0 auto
+
+            .payments__address__contacts-box
+              ul
+                margin-bottom: 20px
+
+@include media_tablet
+  main
+    section._7_payments
+      padding: 60px 0 70px 0
+
+      .container
+        margin: 0
+        >ul
+          flex-wrap: wrap
+
+          li
+            width: 50%
+
+        .payments__address
+          max-width: 100%
+          width: 100%
+
+          .payments__address__map
+            display: none
+
+          .payments__address__contacts
+            margin: 0 auto
+
+            .payments__address__contacts-box
+              +display(flex)
+
+@include media_mobile
+  main
+    section._7_payments
+      .container
+        >ul
+          li
+            margin-bottom: 20px
+            width: 100%
+        .payments__address
+          .payments__address__contacts
+            .payments__address__contacts-box
+              display: initial
+
+              img
+                display: block
+                margin: 0 auto
