no work anim items

--- a/app/index.pug
+++ b/app/index.pug
@@ -61,10 +61,10 @@ body
         section._1_about-project#about-project
             h2.h2-amin-title-bg About project
             .container
-                h2.h2-title About project
+                h2._anim-item.h2-title About project
                 .about-project__wrap
                     .about-project__wrap-inner
-                        .about-project__about-company
+                        ._anim-item.about-project__about-company
                             p Elite closed cottage town in Nur-Sultan consisting of:
                             h3 36 cottages:
                             ul
@@ -72,18 +72,18 @@ body
                                     p - 440 yard² on 1195 yard²
                                 li
                                     p - 214 yard² on 597 yard²
-                        .about-project__about-company
+                        ._anim-item.about-project__about-company
                             h3 About company
                             p “MM Group” Group of Construction Companies is a modern and dynamically developing group of companies that provides a wide range of services in the construction business from design to turnkey delivery of facilities. She began her activities in the construction business in 2013 and has firmly established herself as a reliable Kazakhstani construction company not only in the territory of the Republic of Kazakhstan, but also abroad. The founder and CEO of the group of construction companies "MM Group" is Moldir Suyunshali.
-                        .about-project__about-company
+                        ._anim-item.about-project__about-company
                             h3 Mission of company
                             p The priority of the group of construction companies "MM Group" is a professional approach with the use of innovative solutions in the construction of objects under construction, an experienced team, high-quality materials and timeliness of delivery of objects with an affordable opportunity to purchase not only housing, but also other real estate objects.
                     .about-project__wrap-inner
-                        .about-project__company-logo__box
+                        ._anim-item.about-project__company-logo__box
                             img.about-project__company-logo__img(src="./img/1_about-project_img.jpg")
                             .about-project__company-logo__bg-color
                             .about-project__company-logo__bg-dots
-                        .about-project__about-company
+                        ._anim-item.about-project__about-company
                             h3 Company goal
                             p Strengthening the status of a company that is able to provide consumers with affordable and high-quality real estate on time. Development, reliability and quality!
 
