--- a/app/index.pug
+++ b/app/index.pug
@@ -6,7 +6,7 @@ head
     link(rel="icon" type="image/x-icon" href="./img/favicon.png")
     link(rel='stylesheet' href='./css/main.css')
 body
-    header#header
+    header._anim-item#header
         nav.header_nav-unscrolled#nav
             .container
                 .header__logo
@@ -58,13 +58,13 @@ body
 
 
     main
-        section._1_about-project#about-project
+        section._1_about-project._anim-item#about-project
             h2.h2-amin-title-bg About project
             .container
-                h2._anim-item.h2-title About project
+                h2.h2-title About project
                 .about-project__wrap
                     .about-project__wrap-inner
-                        ._anim-item.about-project__about-company
+                        .about-project__about-company
                             p Elite closed cottage town in Nur-Sultan consisting of:
                             h3 36 cottages:
                             ul
@@ -72,22 +72,22 @@ body
                                     p - 440 yard² on 1195 yard²
                                 li
                                     p - 214 yard² on 597 yard²
-                        ._anim-item.about-project__about-company
+                        .about-project__about-company
                             h3 About company
                             p “MM Group” Group of Construction Companies is a modern and dynamically developing group of companies that provides a wide range of services in the construction business from design to turnkey delivery of facilities. She began her activities in the construction business in 2013 and has firmly established herself as a reliable Kazakhstani construction company not only in the territory of the Republic of Kazakhstan, but also abroad. The founder and CEO of the group of construction companies "MM Group" is Moldir Suyunshali.
-                        ._anim-item.about-project__about-company
+                        .about-project__about-company
                             h3 Mission of company
                             p The priority of the group of construction companies "MM Group" is a professional approach with the use of innovative solutions in the construction of objects under construction, an experienced team, high-quality materials and timeliness of delivery of objects with an affordable opportunity to purchase not only housing, but also other real estate objects.
                     .about-project__wrap-inner
-                        ._anim-item.about-project__company-logo__box
+                        .about-project__company-logo__box
                             img.about-project__company-logo__img(src="./img/1_about-project_img.jpg")
                             .about-project__company-logo__bg-color
                             .about-project__company-logo__bg-dots
-                        ._anim-item.about-project__about-company
+                        .about-project__about-company
                             h3 Company goal
                             p Strengthening the status of a company that is able to provide consumers with affordable and high-quality real estate on time. Development, reliability and quality!
 
-        section._2_slider
+        section._2_slider._anim-item
             .container
                 h2.h2-title Cottages
                 .slider__wrap
@@ -114,7 +114,7 @@ body
                         img(src="./img/arrow-right.svg")
 
 
-        section._3_location#location
+        section._3_location._anim-item#location
             h2.h2-amin-title-bg Location
             .container
                 .location__content
@@ -127,7 +127,7 @@ body
                     .location__map__bg-dots
 
 
-        section._4_advantages#advantages
+        section._4_advantages._anim-item#advantages
             .container
                 img.advantages__dots(src="./img/dots.svg")
                 img.advantages__bg(src="./img/4_advantages_bg.svg")
@@ -168,7 +168,7 @@ body
                             p Each owner of the cottage is given the opportunity to build additional buildings on his #[br] land plot: a bathhouse, a sauna, a summer kitchen, etc.
 
 
-        section._5_why-nura#why-nura
+        section._5_why-nura._anim-item#why-nura
             h2.h2-amin-title-bg Why NURA ELITE?
             .container
                 h2.h2-title Why NURA ELITE?
@@ -206,7 +206,7 @@ body
                                     p Centralized water supply, power supply and sewerage.
                                     p The heating system and hot water is one common gas tank for the entire town, functioning at the expense of gas.
 
-        section._6_technologies#technologies
+        section._6_technologies._anim-item#technologies
             h2.h2-amin-title-bg Building technology
             .container
                 h2.h2-title Building technology
@@ -251,7 +251,7 @@ body
                     .technologies__bg-logo
                         img(src="./img/bg-logo__cherry.svg")
 
-        section._7_payments#payments
+        section._7_payments._anim-item#payments
             h2.h2-amin-title-bg Payment methods
             .container
                 h2.h2-title Payment methods
