--- a/app/sass/_4_advantages.sass
+++ b/app/sass/_4_advantages.sass
@@ -62,6 +62,28 @@ main
           li:last-child
             width: 100%
 
+main
+  section._4_advantages._anim-item
+    .container
+      .advantages__content-box
+        h2
+          @extend %anim-styles__hidden
+
+        ul,
+        .advantages__img-box
+          @extend %anim-styles__hidden
+
+main
+  section._4_advantages._anim-item._active
+    .container
+      .advantages__content-box
+        h2
+          @extend %anim-styles__active-700ms
+
+        ul,
+        .advantages__img-box
+          @extend %anim-styles__active-1300ms
+
 @include media_desktop
   main
     section._4_advantages
