--- a/app/sass/_components/_burger_menu.sass
+++ b/app/sass/_components/_burger_menu.sass
@@ -2,7 +2,7 @@ body
   .burger-menu
     width: 100%
     height: 100%
-    position: absolute
+    position: fixed
     top: 0
     left: 0
     z-index: 6
@@ -99,7 +99,7 @@ body
 
 body
   .burger-menu__btn-open
-    position: absolute
+    position: fixed
     top: 15px
     right: 15px
     width: 50px
